--- a/source/components/CreatePlan/CreatePlan.scss
+++ b/source/components/CreatePlan/CreatePlan.scss
@@ -9,7 +9,7 @@
 	background-color: green;
 }
 
-.image{
+.headerImage{
 	position: relative;
 	float: left;
 	width: 150px;
@@ -17,11 +17,12 @@
 	background-color: blue;
 }
 
+
 .inputFieldDiv{
 	position: relative;
 	width: 100%;
-	height: 200px;
-	background-color: red;
+	height: 150px;
+	background-color: black;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -30,19 +31,118 @@
 
 .inputField{
 	position: relative;
-	height: 100px;
+	height: 75px;
 	width: 100%;
-	background-color: black;
+	background-color: red;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 20px;
 }
+
+.inputFieldText{
+	margin-left: 30px;
+	font-size: 32px;
+}
+
+.input{
+	margin-right: 30px;
+	width: 60%;
+}
+
 
 .courseListDiv{
 	position: relative;
 	width: 100%;
 	height: 500px;
-	background-color: blue;
+	background-color: black;
+	display: flex;
+	flex-direction: row;
 }
 
-.innerLeftDiv{
+
+.courseListLeftSubject{
+	width: 40%;
+	height: 100%;
+	background-color: green;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 20px;
+}
+
+.leftList{
+	width: 90%;
+	height: 80%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	background: white;
+	overflow-y: auto;
+	overflow-x: hidden;;
+}
+
+.rightList{
+	width: 90%;
+	height: 80%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	background: white;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+.listItem{
+	width: 101%;
+}
+
+.listButton{
+	width: 101%;
+}
+
+.courseListRightCourse{
+	width: 60%;
+	height: 100%;
+	background-color: blue;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 20px;
+}
+
+.courseListTitle{
+	font-size: 40px;
+}
+
+
+.bottomHintText{
+	min-width: 60%;
+	background-color: red;
+	font-size: 20px;
+	text-align: center;
+
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 20px;
+}
+
+
+.bodyDivInnerLeft{
 	position: relative;
 	width: 60%;
 	height: 100%;
@@ -52,7 +152,7 @@
 	position: relative;
 	float: right;
 	width: 40%;
-	height: 700px;
+	height: 670px;
 	background-color: yellow;
 }
 
