--- a/source/components/CreatePlan/CreatePlan.scss
+++ b/source/components/CreatePlan/CreatePlan.scss
@@ -1,9 +1,16 @@
+::-webkit-scrollbar {
+    display: none;
+}
+
+body{
+    overflow:hidden;
+}
 
 .navbarDiv{
     padding: 6px;
 }
 
-.header{
+.header1{
 	position: relative;
 	width: 100%;
 	height: 52px;
@@ -130,7 +137,7 @@
 
 .leftList{
 	width: 110px;
-    height: 600px;
+    height: 570px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -144,8 +151,8 @@
 }
 
 .rightList{
-    width: 100%;
-    height: 590px;
+
+    height: 570px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -154,7 +161,16 @@
     overflow-x: hidden;
     list-style-type:none;
     margin:0px;
-    padding: 30px;
+    padding: 10px 30px;
+    float: left;
+}
+
+.ui.card, .ui.cards>.card{
+    box-shadow: none;
+}
+
+.card_header{
+    background-color: white;
 }
 
 .ui.table td{
@@ -172,8 +188,8 @@
 
 .listItem{
     margin-bottom: 5px;
-	width: 80px;
-    margin-right: -30px;
+	width: 70px;
+    margin-right: -50px;
     float: right;
     padding-left: 10px;
     height:50px;
@@ -189,10 +205,10 @@
 
 .rightItem{
     width: 100%;
-    padding-left: 20px;
+    padding-left: 10px;
     height:50px;
     line-height: 50px;
-    font-size: 1.3em;
+    font-size: 1.1em;
     vertical-align: middle;
 }
 
@@ -209,11 +225,17 @@
 }
 
 .leftList > li:hover{
-    width: 105px;
-
+    width: 90px;
 }
 
+.leftList .selected{
+    width: 110px;
+    border: 2px solid purple;
+}
 
+.leftList .selected:hover{
+    width: 110px;
+}
 
 .listButton{
 	width: 101%;
@@ -221,7 +243,7 @@
 
 .courseListRightCourse{
 	width: 60%;
-	height: 850px;
+	height: 830px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -234,6 +256,49 @@
 	font-size: 40px;
 }
 
+.courseDetail{
+    padding: 40px;
+    position: absolute;
+    top: 40px;
+    height: 560px;
+    min-width: 420px;
+
+    .courseId{
+        margin: 0px;
+        padding-left: 5px;
+    }
+
+    .courseName{
+        margin:0px;
+        font-size: 1.0em;
+        font-weight: normal;
+        border-top: 1px solid red;
+        padding-top: 5px;
+        width: 100%;
+        padding-left: 5px;
+    }
+
+    .creditInfo{
+        font-size: 1.0em;
+        font-weight: normal;
+        color: #999;
+        font-style: italic;
+        margin-top: 20px;
+        margin-bottom: 5px;
+        padding-left: 5px;
+    }
+
+    .courseInfo{
+        padding-left: 5px;
+    }
+
+    .addCourseButton{
+        position: absolute;
+        bottom: -5px;
+        left: 30px;
+    }
+
+}
 
 .bottomHintText{
 	min-width: 60%;
@@ -244,8 +309,8 @@
 
 .bodyDivInnerRight{
 	position: relative;
-	width: 70%;
-	height: 1000px;
+	width: 75%;
+	height: 850px;
     background-color: rgb(252, 251, 249);
 }
 
@@ -253,10 +318,10 @@
 .planInfoDiv{
 	position: relative;
 	float: right;
-	width: 30%;
-	height: 1000px;
+	width: 25%;
+	height: 850px;
     background-color: rgb(252, 251, 249);
-    box-shadow: 3px 0px 3px #ccc;
+    box-shadow: 1px 0px 1px #ccc;
     z-index: 2;
     text-align: center;
 }
@@ -306,9 +371,9 @@
 }
 
 .courseList{
-    height: 610px;
+    height: 580px;
     background-color: rgb(254, 254, 254);
-    border-bottom: 1px solid rgb(200,200,200);
+
 }
 
 .addList{
@@ -336,15 +401,21 @@
     margin-bottom: 10px;
 }
 
+.delete{
+    position: absolute;
+    right: 5px;
+    font-weight: bold;
+}
+
 .buttons{
     padding-top: 10px;
     height: 65px;
     border-bottom: 1px solid rgb(200,200,200);
-    background-color: rgb(245,245,245);
+        background-color: rgb(254, 254, 254);
 }
 
 .ui.primary.button, .ui.primary.buttons .button{
-    margin-right : 40px;
+    margin : 0px 20px;
 }
 
 
@@ -355,4 +426,11 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: top;
+}
+
+.footer{
+    width:100%;
+    height: 160px;
+    background-color: rgb(80, 80, 80);
+
 }
