--- a/source/components/Login/Login.scss
+++ b/source/components/Login/Login.scss
@@ -3,3 +3,30 @@ body > div > div,
 body > div > div > div.login-form {
     height: 100%;
 }
+
+body{
+    background-color: rgb(252, 251, 249);
+}
+
+.title1{
+    width: 530px;
+	height: 65px;
+    background-size: cover;
+	background-image: url("../../assets/title.png");
+    position: relative;
+    top: 40px;
+    left: -40px;
+}
+
+.logo{
+    width: 50px;
+	height: 50px;
+    background-size: cover;
+	background-image: url("../../assets/Picture1.png");
+    position: relative;
+    top: -17px;
+}
+
+.ui.segment{
+    padding: 20px 15px;
+}
