--- a/source/components/ViewPlan/ViewPlan.scss
+++ b/source/components/ViewPlan/ViewPlan.scss
@@ -55,7 +55,7 @@ body{
   position: relative;
   float: right;
   width: 25%;
-  height:850px;
+  height:1300px;
   background-color: rgb(252, 251, 249);
   box-shadow: 2px 0px 2px #ccc;
   z-index: 2;
@@ -171,7 +171,7 @@ body{
 
 .rightDiv{
   width:75%;
-  height:850px;
+  height:1300px;
   align-items: center;
   background-color: rgb(252, 251, 249);
   box-shadow: 3px 0px 3px #ccc;
@@ -254,7 +254,7 @@ body{
     box-shadow: 3px 0px -3px #ccc;
     border: 1px solid rgb(200, 200, 200);
     margin: 10px;
-    height:650px;
+    //height:1100px;
     background-color: white;
 
   }
