--- a/source/components/ViewPlan/ViewPlan.scss
+++ b/source/components/ViewPlan/ViewPlan.scss
@@ -261,6 +261,18 @@ body{
 
 }
 
+.true{
+  background:limegreen;
+  box-shadow: 3px 0px -3px #ccc;
+  border: 3px solid rgb(200, 200, 200);
+}
+.false{
+  background:red;
+  color:white;
+  box-shadow: 3px 0px -3px #ccc;
+  border: 3px solid rgb(200, 200, 200);
+}
+
 .footer{
     width:100%;
     height: 160px;
